# fastapi-skeleton

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test.db
env/: config.test.yaml  config.yaml
fastapi_skeleton/: container.py  main.py
fastapi_skeleton/common/: consts.py  enum.py
fastapi_skeleton/common/error/: exception.py  handler.py
fastapi_skeleton/common/util/: auth.py  database.py  jwt.py  redis.py  repository.py  time.py  transaction.py
fastapi_skeleton/config/: config.py  env.py  redis.py
fastapi_skeleton/middleware/: log.py
fastapi_skeleton/model/: oauth.py
fastapi_skeleton/model/request/: auth.py  example.py
fastapi_skeleton/model/response/: auth.py  example.py
fastapi_skeleton/repository/: example.py  user.py
fastapi_skeleton/router/: auth.py  example.py  index.py
fastapi_skeleton/schema/: example.py  user.py
fastapi_skeleton/service/: example.py  oauth.py  user.py
fastapi_skeleton/template/: log.html
tests/repository/: conftest.py
tests/repository/example/: conftest.py  test_example.py
tests/service/example/: conftest.py  test_find_by_id.py  test_save.py
