[tool.poetry]
name = "fastapi-skeleton"
version = "0.1.0"
description = ""
authors = ["Minsoo <als95.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_skeleton"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
sqlalchemy = "1.4.46"
dependency-injector = "^4.41.0"
pydantic = "^1.10.6"
asyncio = "^3.4.3"
nest-asyncio = "^1.5.6"
greenlet = "^2.0.2"
itsdangerous = "^2.1.2"
pyyaml = "^6.0"
uvicorn = "^0.22.0"
taskipy = "^1.11.0"
pylint = "^2.17.4"
aiosqlite = "^0.19.0"
pytest = "^7.4.0"
pytest-it = "^0.1.4"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
fastapi-utils = "^0.2.1"
pytz = "^2023.3"
asyncpg = "^0.28.0"

[tool.taskipy.tasks]
server = "uvicorn fastapi_skeleton.main:app --host 0.0.0.0 --port 8000 --reload"
test = "API_ENV=test python3 -m pytest tests --it"
lint = "pylint --rcfile=.pylintrc --disable=R fastapi_skeleton"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
